<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".NameSurnameFragment">
    <data>
        <variable
            name="viewModel"
            type="com.example.room.MainViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="17dp"
                        android:textColor="@color/dark_cyan"
                        android:textStyle="bold|italic"
                        android:textSize="27sp"/>

                    <EditText
                        android:id="@+id/editName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/edit_name"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:backgroundTint="@color/dark_cyan"
                        android:text="@={viewModel.name}"
                        android:padding="16dp"/>

                    <EditText
                        android:id="@+id/editSurname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/edit_surname"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:backgroundTint="@color/dark_cyan"
                        android:text="@={viewModel.surname}"
                        android:padding="16dp"/>

                </LinearLayout>

                <Button
                    android:id="@+id/saveButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="5dp"
                    android:backgroundTint="@color/dark_cyan"
                    android:text="@string/save_button"
                    android:onClick="@{() -> viewModel.addNameSurname()}"/>
            </LinearLayout>


            <TextView
                android:id="@+id/title_name_surname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginStart="10dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@string/title_name_surname"/>

            <TextView android:id="@+id/name_surname_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginStart="10dp"
                android:textColor="@color/black"
                android:text="@{viewModel.getNameSurname}"/>
        </LinearLayout>
    </ScrollView>
</layout>